<resources>
    <string name="app_name">Mayor Ideas</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_new_idea">New Idea</string>

    <string name="hello_world">Hello world!</string>
    <string name="category_prompt">Choose a category</string>
    <string name="idea_title">Idea name</string>
    <string name="category_title">Category</string>
    <string name="idea_description">Idea description</string>
    <string name="submit_idea">Submit idea</string>
    <string name="success">Success :)</string>
    <string name="sending">Sending</string>
    <string name="error">Error :(</string>
    <string name="add_photo">Add a photo</string>

    <!-- Categories -->
    <string name="environment">Environment</string>
    <string name="culture">Culture</string>
    <string name="transport">Transport</string>
    <string name="infrastructure">Infrastructure</string>

    <string name="title_activity_maps_test">Map</string>
    <string name="title_activity_idea_detail">Idea Details</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!-- Drawer items / categories -->
    <string name="title_activity_comments">Comments</string>
    <string name="hot_ideas">Trending</string>
    <string name="top_ideas">Top ideas</string>
    <string name="following">Following</string>
    <string name="all_categories">All categories</string>
    <string name="my_ideas">My ideas</string>
    <string name="about">About</string>
    <string name="ideas_on_map">Ideas on a map</string>

    <string name="empty_title_error">Title must not be empty!</string>
    <string name="empty_description_error">Description must not be empty!</string>
    <string name="no_picture_error">Every idea must have at least one picture.</string>
    <string name="latest_comments">Latest comments</string>
    <string name="no_comments_at_present">There are no comments at the moment.</string>
    <string name="add_first_comment">Add the first one!</string>
    <string name="see_all_comments">See all comments</string>
    <string name="loading">Loading data</string>
    <string name="my_account">My account</string>
    <string name="login_username">Your email</string>
    <string name="login_password">Your password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="welcome_to_mayor_ideas">Welcome to Mayor Ideas</string>
    <string name="login_necessary_my_ideas">You have to be logged in to see ideas that you have added.</string>
    <string name="login_necessary_comments">You cannot add comments unless you are logged in.</string>
    <string name="login_necessary_voting">You cannot vote on idea unless you are logged in.</string>
    <string name="login_necessary_following">You cannot start following an idea unless you are logged in.</string>
    <string name="incorrect_login">Incorrect username/password combination. Please check your login details.</string>
    <string name="register_name">Your full name</string>
    <string name="register_password_check">Your password again</string>
    <string name="register_button_text">Register</string>
    <string name="registering">Registering</string>
    <string name="username_empty_error">Username must not be empty!</string>
    <string name="name_empty_error">Name must not be empty.</string>
    <string name="password_empty_error">Password must not be empty.</string>
    <string name="passwords_not_matching">Passwords do not match.</string>
    <string name="password_too_short">Password must be at least 6 characters long.</string>
    <string name="new_user_activity_title">Register new user</string>
    <string name="empty_list_following">"You are not following any ideas yet. Take a look at trending, new or ideas close to you and click the 'heart' icon to start following them. "</string>
    <string name="empty_list_category">There are no ideas in this category yet. Add the first one by clicking the \'Plus\' button in the bottom right corner of your screen.</string>
    <string name="empty_list_my_ideas">You have not added any ideas yet. Add the first one by clicking the \'Plus\' icon in the bottom right corner of your screen</string>
    <string name="empty_list_no_ideas">Be the first one to add an idea! Click the \'Plus\' icon in the bottom right corner of your screen and let us know what your idea is.</string>
    <string name="username_contains_comma_error">The username must not contain a comma (\',\').</string>
    <string name="name_contains_comma_error">Name must not contain a comma (\',\').</string>
    <string name="login_welcome">"Good to see you back "</string>
    <string name="username_title">Username</string>
    <string name="email_title">Email</string>
    <string name="ideas_title">Ideas</string>
    <string name="votes_title">Votes</string>
    <string name="comments_title">Comments</string>
    <string name="following_title">Follows</string>
    <string name="login_necessary_user_details">Please login or signup in order to see your account details.</string>
    <string name="logout">{faw-sign-out} LOG OUT</string>
    <string name="login_or_signup">{faw-sign-in} LOG IN / SIGN UP</string>
    <string name="login_to_start">Login or Sign up to start using Mayor Ideas with all its features. It\'s FREE!</string>

    <!-- LIBRARY DEFINITIONS -->
    <string name="define_floatlabelededittext"></string>
    <string name="library_floatlabelededittext_author">Henrik Sandström</string>
    <string name="library_floatlabelededittext_libraryName">Float Labeled EditText</string>
    <string name="library_floatlabelededittext_libraryDescription">Simple implementation of a Float Labeled EditText: An Android ViewGroup which uses a child EditText and puts the hint on top of the EditText when it is populated with text.</string>
    <string name="library_floatlabelededittext_libraryVersion">0.0.6</string>
    <string name="library_floatlabelededittext_isOpenSource">true</string>
    <string name="library_floatlabelededittext_repositoryLink">https://github.com/wrapp/floatlabelededittext</string>
    <string name="library_floatlabelededittext_licenseId">apache_2_0</string>

    <string name="define_asynchronoushttpclientforandroid"></string>
    <string name="library_asynchronoushttpclientforandroid_author">James Smith</string>
    <string name="library_asynchronoushttpclientforandroid_authorWebsite">http://loopj.com/</string>
    <string name="library_asynchronoushttpclientforandroid_libraryName">Asynchronous Http Client for Android</string>
    <string name="library_asynchronoushttpclientforandroid_libraryDescription">An asynchronous, callback-based Http client for Android built on top of Apache\'s HttpClient libraries.</string>
    <string name="library_asynchronoushttpclientforandroid_libraryWebsite">http://loopj.com/android-async-http/</string>
    <string name="library_asynchronoushttpclientforandroid_libraryVersion">1.4.9</string>
    <string name="library_asynchronoushttpclientforandroid_isOpenSource">true</string>
    <string name="library_asynchronoushttpclientforandroid_repositoryLink">https://github.com/loopj/android-async-http</string>
    <string name="library_asynchronoushttpclientforandroid_licenseId">apache_2_0</string>

    <string name="define_androidimageslider"></string>
    <string name="library_androidimageslider_author">daimajia</string>
    <string name="library_androidimageslider_libraryName">Android Image Slider</string>
    <string name="library_androidimageslider_libraryDescription">This is an amazing image slider for the Android platform. I decided to open source this because there is really not an attractive, convenient slider widget in Android.</string>
    <string name="library_androidimageslider_libraryVersion">1.1.5</string>
    <string name="library_androidimageslider_isOpenSource">true</string>
    <string name="library_androidimageslider_repositoryLink">https://github.com/daimajia/AndroidImageSlider</string>
    <string name="library_androidimageslider_licenseId">mit</string>

    <string name="define_dialogplus"></string>
    <string name="library_dialogplus_author">Orhan Obut</string>
    <string name="library_dialogplus_libraryName">DialogPlus</string>
    <string name="library_dialogplus_libraryDescription">Advanced dialog solution for android</string>
    <string name="library_dialogplus_libraryVersion">1.11</string>
    <string name="library_dialogplus_isOpenSource">true</string>
    <string name="library_dialogplus_repositoryLink">https://github.com/orhanobut/dialogplus</string>
    <string name="library_dialogplus_licenseId">apache_2_0</string>

    <!-- END OF LIBRARY DEFINITIONS -->

    <string name="mayor_ideas_about">Mayor Ideas is a crowdsourcing platform for citizen ideas and issues.</string>
    <string name="open_camera">Camera</string>
    <string name="login_necessary_new_idea">You have to be logged in to be able to add a new idea.</string>

</resources>
