<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="mm.mayorideas.NewIdeaActivity">

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            float:fletTextAppearance="@style/FloatLabeledEditTextStyle">

            <EditText
                android:id="@+id/new_user_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/login_username"
                android:textColor="@android:color/black"/>
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            float:fletTextAppearance="@style/FloatLabeledEditTextStyle">

            <EditText
                android:id="@+id/new_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/register_name"
                android:textColor="@android:color/black"/>
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            float:fletTextAppearance="@style/FloatLabeledEditTextStyle">

            <EditText
                android:id="@+id/new_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_password"
                android:textColor="@android:color/black"/>
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            float:fletTextAppearance="@style/FloatLabeledEditTextStyle">

            <EditText
                android:id="@+id/new_user_password_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/register_password_check"
                android:textColor="@android:color/black"/>
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/register_button_text"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:onClick="registerNewUser"
            custom:pb_colorComplete="@color/green_complete"
            custom:pb_colorNormal="@color/mayorideas_blue"
            custom:pb_colorPressed="@color/mayorideas_blue_dark"
            custom:pb_colorProgress="@color/purple_progress"
            custom:pb_textComplete="@string/success"
            custom:pb_textProgress="@string/registering"
            custom:pb_textError="@string/error"
            custom:pb_colorError="@color/red_error" />
    </LinearLayout>
</ScrollView>